--- a/package.xml
+++ b/package.xml
@@ -10,6 +10,9 @@
   <!-- Dependências de execução -->
   <exec_depend>launch</exec_depend>
   <exec_depend>rclpy</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>nav_msgs</exec_depend>
 
   <!-- Ferramentas de construção -->
   <buildtool_depend>ament_python</buildtool_depend>
